--- a/0x00-Webpack/task_2/package.json
+++ b/0x00-Webpack/task_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task_2",
+  "name": "task_1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "css-loader": "^6.8.1",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
-    "jquery": "^3.7.1",
-    "lodash": "^4.17.21",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21"
   }
 }
