--- a/0x01-react_intro/task_4/dashboard/package.json
+++ b/0x01-react_intro/task_4/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Zelipha.github.io/alx-react",
+  "homepage": "http://walu-dev.github.io/alx-react",
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
